--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>McDonald's Maarssen</title>
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,600,700&display=swap" rel="stylesheet">
 	<link href = "style.css" rel="STYLESHEET" type="text/css">
-	<link rel="shortcut icon" type="image/x-icon" href="/media/Mcdonalds-Logo-PNG-File.png" />
+	<link rel="shortcut icon" type="image/x-icon" href="media/Mcdonalds-Logo-PNG-File.png" />
 </head>
 
 <body>
@@ -65,6 +65,21 @@
 	</div>
 
 	<a href="#" class="viewproducts">BEKIJK PRODUCTEN</a>
+
+	<div class='blok2'>
+		<h1>Ontbijten bij McDonald's</h1>
+		<p>Bij McDonald's kun je tussen <b><u>07:00</u></b> en <b><u>11:00</u></b> 's ochtends
+		<br>genieten van een vers klaargemaakt ontbijt.
+	</div>
+
+	<a href="#" class="viewproducts2">BEKIJK PRODUCTEN</a>
+
+	<div class='blok3'>
+		<h1>Locatie</h1>
+		<p>Hier vind je de locatie van <b><u>McDonald's Maarssen</u></b>.</p>
+	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d39188.63595822583!2d5.003656108595714!3d52.129050665997084!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c66e2ab59980ff%3A0x32cf6e5e2190f51!2sMcDonald&#39;s%20Maarssen!5e0!3m2!1snl!2snl!4v1571324118747!5m2!1snl!2snl" width="1280" height="600" frameborder="0"  allowfullscreen=""></iframe>
+	<br><br><br><br><br><br>
+	</div>
 
 </div>
 </body>
