--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<span id="slider-image-2"></span>
 		<span id="slider-image-3"></span>
 		<div class="image-container">
-			<img src="media/1.jpg" width=500 height=667 class="slider-image" alt="1">
+			<img src="media/1.JPG" width=500 height=667 class="slider-image" alt="1">
 			<img src="media/2.jpg" width=500 height=667 class="slider-image" alt="2">
 		</div>
 		<div class = "button-container">
