--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
 	  	<div class="hamburger"><div><img src='media/Mcdonalds-Logo-PNG-File.png' width=75 height=75 alt="logo"></div></div>
 	  		<div class="menu">
 	    		<div>
-	      		<div>
-	        		<ul>
-	          		<li><a href="#">AANBIEDINGEN</a></li>
-	          		<li><a href="#">MENU'S</a></li>
-	          		<li><a href="#">BURGERS</a></li>
-	          		<li><a href="#">FRIET</a></li>
-								<li><a href="#">DRANKEN</a></li>
-								<li><a href="#">SAUZEN</a></li>
-	        		</ul>
-						</div>
+					<div>
+						<ul>
+							<li><a href="#">AANBIEDINGEN</a></li>
+							<li><a href="#">MENU'S</a></li>
+							<li><a href="#">BURGERS</a></li>
+							<li><a href="#">FRIET</a></li>
+							<li><a href="#">DRANKEN</a></li>
+							<li><a href="#">SAUZEN</a></li>
+						</ul>
 					</div>
 				</div>
+			</div>
 	</div>
 
 	<div class="slide-container">
@@ -54,7 +54,7 @@
 		<span id="slider-image-2"></span>
 		<span id="slider-image-3"></span>
 		<div class="image-container">
-			<img src="media/1.JPG" width=500 height=667 class="slider-image" alt="1">
+			<img src="media/1.jpg" width=500 height=667 class="slider-image" alt="1">
 			<img src="media/2.jpg" width=500 height=667 class="slider-image" alt="2">
 		</div>
 		<div class = "button-container">
@@ -156,3 +156,4 @@
 
 	</div>
 </body>
+</html>
